[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "a_healthy_dns"
version = "0.1.52"
description = "A healthy DNS project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "cryptography>=46.0.5,<47.0.0",
  "dnspython>=2.8.0,<3.0.0",
]

[project.scripts]
a-healthy-dns = "indisoluble.a_healthy_dns.main:main"

[project.optional-dependencies]
test = [
  "pytest>=8.0,<9.0",
  "pytest-cov>=5.0,<6.0",
  "coverage>=7.0,<8.0",
]

[tool.setuptools.packages.find]
include = ["indisoluble", "indisoluble.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=indisoluble.a_healthy_dns --cov-report=term --cov-report=xml"

[tool.coverage.run]
source = ["indisoluble.a_healthy_dns"]
omit = [
  "*/tests/*",
]

[tool.coverage.report]
exclude_also = [
  "def __repr__",
  "raise NotImplementedError",
  "if __name__ == \"__main__\":",
  "pass",
  "raise ImportError",
]

[tool.coverage.html]
directory = "coverage_html_report"
